--- a/greenpost/src/app/components/workspaces/logistics-transactions/create-modal/create-modal.component.html
+++ b/greenpost/src/app/components/workspaces/logistics-transactions/create-modal/create-modal.component.html
@@ -1,14 +1,12 @@
 <mat-form-field>
-    <mat-select [(value)]="selected">
-        <mat-option>None</mat-option>
+    <mat-select>
         <mat-option value="Леонид Карпов">Леонид Карпов</mat-option>
         <mat-option value="Василий Васькин">Василий Васькин</mat-option>
         <mat-option value="Григорий Сковорода">Григорий Сковорода</mat-option>
     </mat-select>
 </mat-form-field>
 
-<p>Вы выбрали: {{selected}}</p>
 <div mat-dialog-actions>
-    <button mat-button tabindex="1">Сохранить</button>
-    <button mat-button tabindex="2">Отменить</button>
+    <button mat-button tabindex="2">Сохранить</button>
+    <button mat-button tabindex="1" mat-dialog-close>Отменить</button>
 </div>
