--- a/greenpost/src/app/components/workspaces/logistics-transactions/create-modal/create-modal.component.html
+++ b/greenpost/src/app/components/workspaces/logistics-transactions/create-modal/create-modal.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-    <mat-select>
+    <mat-select value="Леонид Карпов">
         <mat-option value="Леонид Карпов">Леонид Карпов</mat-option>
         <mat-option value="Василий Васькин">Василий Васькин</mat-option>
         <mat-option value="Григорий Сковорода">Григорий Сковорода</mat-option>
@@ -7,6 +7,6 @@
 </mat-form-field>
 
 <div mat-dialog-actions>
-    <button mat-button tabindex="2">Сохранить</button>
+    <button mat-button tabindex="2" mat-dialog-close>Сохранить</button>
     <button mat-button tabindex="1" mat-dialog-close>Отменить</button>
 </div>
