--- a/greenpost/src/styles.css
+++ b/greenpost/src/styles.css
@@ -6,7 +6,11 @@
   position: fixed !important;
   z-index: 997;
 }
+.clickable-row {
+    cursor: pointer !important;
+    position: relative !important;
+}
 .clickable-row:hover {
-    background-color: #f5f5f5;
-    cursor: pointer;
+    background-color: #f5f5f5 !important;
+    cursor: pointer !important;
 }
