--- a/greenpost/src/app/components/workspaces/logistics-transactions/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/logistics-transactions/section/section.component.html
@@ -80,18 +80,25 @@
                 <mat-header-cell *matHeaderCellDef>Статус</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.status}}</mat-cell>
             </ng-container>
-            <mat-header-row *matHeaderRowDef="['select', 'from', 'to', 'status', 'courier']"></mat-header-row>
+            <ng-container matColumnDef="date">
+                <mat-header-cell *matHeaderCellDef>Дата создания</mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.createdOn ? (element.createdOn | date:"dd.MM.yyyy") : ''}}</mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="['select', 'date', 'from', 'to', 'status', 'courier']"></mat-header-row>
             <mat-row *matRowDef="let row; columns: ['select', 'from', 'to', 'status', 'courier']"
-                     [class.clickable-row]="isTake(row)"
-                     [@detailExpand]="!row.take || row.take == expandedElement ? 'expanded' : 'collapsed'"
                      (click)="isTake(row) ? (expandedElement = expandedElement == row ? null : row) : selection.toggle(row)"></mat-row>
         </table>
     </mat-card>
 </div>
-
+<!--[class.clickable-row]="isTake(row)"
+            [@detailExpand]="!row.take || row.take == expandedElement ? 'expanded' : 'collapsed'"-->
 <button [@actions]="selection.hasValue() ? 'active' : 'inactive'"
         mat-fab color="accent" class="floating-button" matTooltip="Назначить курьера"
-        matTooltipPosition="left" (click)="openCreateDialog()"><mat-icon>create</mat-icon></button>
+        matTooltipPosition="left" (click)="openCreateDialog()">
+    <mat-icon>create</mat-icon>
+</button>
 <button [@actions]="selection.hasValue() ? 'active' : 'inactive'"
         mat-fab color="warn" class="floating-button" matTooltip="Снять курьера"
-        matTooltipPosition="left" [style.bottom]="'110px'"><mat-icon>clear</mat-icon></button>
+        matTooltipPosition="left" [style.bottom]="'110px'">
+    <mat-icon>clear</mat-icon>
+</button>
