--- a/greenpost/src/app/components/workspaces/my-orders/card/card.component.html
+++ b/greenpost/src/app/components/workspaces/my-orders/card/card.component.html
@@ -15,10 +15,10 @@
                 </div>
                 <div fxFlex="1 1 auto" fxLayout="column">
                     <mat-form-field>
-                        <input matInput placeholder="Адрес отправителя" value="{{order.from}}" />
+                        <input matInput placeholder="Адрес отправителя" value="test" />
                     </mat-form-field>
                     <mat-form-field>
-                        <input matInput placeholder="Адрес получателя" value="{{order.to}}" />
+                        <input matInput placeholder="Адрес получателя" value="test" />
                     </mat-form-field>
                 </div>
                 <div fxFlex="1 1 auto" fxLayout="column">
